# api.yaml
@@ -6,9 +6,9 @@ x-runtime:
     level: "INFO"
     output: "STDOUT"
   stats:
-    output: "DATADOG"
+    output: DATADOG
     datadog:
-      address: "statsd:8126"
+      address: statsd:8125
       flushinterval: "10s"
   signals:
     installed:
@@ -31,14 +31,14 @@ x-transportd:
   backends:
     - app
   app:
-    host: "http://app:8081"
+    host: http://app:8081
     pool:
       ttl: "24h"
       count: 1
 info:
   version: 1.0.0
   title: "awsconfig-filterd"
-  description: "A service which filters AWS Config events"
+  description: "a lambda handler which filters AWS Config events"
   contact:
     name: Security Development
     email: secdev-external@atlassian.com
@@ -54,23 +54,28 @@ paths:
           description: "Success."
       x-transportd:
         backend: app
-  /{name}:
-    get:
-      description: An API Call.
-      parameters:
-        - name: "name"
-          in: "path"
-          description: "Name of person to greet."
-          required: true
-          schema:
-            type: "string"
+  /filter:
+    post:
+      description: Filter AWS Config events
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ConfigNotification'
       responses:
-        "200":
+        "204":
           description: "Success"
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Greeting'
+                $ref: '#/components/schemas/ConfigNotification'
+        "400":
+          description: "Invalid input"
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
       x-transportd:
         backend: app
         enabled:
@@ -80,16 +85,60 @@ paths:
           - "responsevalidation"
           - "lambda"
         lambda:
-          arn: "name_or_arn"
+          arn: "filter"
           async: false
-          request: '{}'
+          request: '#! json .Request.Body !#'
           success: '{"status": 200, "bodyPassthrough": true}'
-          error: '{"status": 500, "bodyPassthrough": true}'
+          error: '{"status": 400, "bodyPassthrough": true}'
 components:
   schemas:
-    Greeting:
+    ConfigNotification:
       type: object
       properties:
-        greeting:
+        Message:
           type: string
-          description: The personal greeting.
+          description: The AWS Config diff event represented stringified JSON.
+        Timestamp:
+          type: string
+          description: The RFC3339 date time the AWS Config SNS event was sent.
+        ProcessedTimestamp:
+          type: string
+          description: The RFC3339 date time the event was filtered by awsconfig-filterd.
+        Type:
+          type: string
+          description: The AWS Config SNS message type (optional).
+        MessageId:
+          type: string
+          description: The AWS Config SNS message ID (optional).
+        TopicArn:
+          type: string
+          description: The AWS Config SNS topic ARN (optional).
+        Subject:
+          type: string
+          description: The AWS Config SNS subject (optional).
+        SignatureVersion:
+          type: string
+          description: The AWS Config SNS signature version (optional).
+        Signature:
+          type: string
+          description: The AWS Config SNS signature (optional).
+        SigningCertURL:
+          type: string
+          description: The AWS Config SNS signing cert URL (optional).
+        UnsubscribeURL:
+          type: string
+          description: The AWS Config SNS unsubscribe URL (optional).
+    Error:
+      type: object
+      properties:
+        errorMessage:
+          type: string
+          description: The error message.
+        errorType:
+          type: string
+          description: The error type.
+        stackTrace:
+          type: array
+          description: The stack trace output, if any.
+          items:
+            type: string
